# dns-relay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hosts
include/: DNS Relay.h  DnsRelay.h  DnsServer.h  cache.h
src/: DNS Relay.cpp  DnsRelay.cpp  DnsServer.cpp  cache.cpp  getopt.c
